Fixed z-indexes and background

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -97,7 +97,10 @@ body {
 #product-grid {
 	box-shadow: 0 2px 4px rgba(0,0,0,.25);
 	background-color: white;
-	z-index: -2;
+}
+
+#product-grid > div.row > div{
+	z-index: 1;
 }
 
 #putinbasket {
